Common Mixins and Entities
Signed-off-by: Joseph T. McQuigg <J.T.McQuigg12@gmail.com>